src/styles/schedule.css
#schedule {
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
}

#schedule > h3 {
    margin-bottom: 1rem;
}

#schedule table {
    width: 100%;
    max-width: 1000px;
    background-color: purple;
    border: 0.25rem solid var(--secondary-colour);
    border-color: var(--primary-colour);
    border-radius: 1rem;
    padding: 15px;
}

#schedule td:first-child {
    display: flex;
    width: 5ch;
    font-size: 3rem;
    text-align: left;
    padding-right: 1rem;
}

#schedule td:last-child {
    font-size: 1.5rem;
}

#schedule tr {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 0.15rem solid #777777;
}

@media screen and (max-width: 768px) {
    #schedule {
        width: 80%;
        margin-left: auto;
        margin-right: auto;
    }

    #schedule table {
        padding-right: 5px;
        padding-left: 5px;
    }
    
    #schedule td:first-child {
        font-size: 1.5rem;
        margin-right: 15px;
    }

    #schedule td:last-child {
        font-size: 0.75rem;
        width: 100px;
        text-align: right;
        white-space: normal;
        word-break: break-word;
    }
}

